Úprava metod, které vytvářejí testovací data